feat: settings update route
